# evolvable_morphologies

./: .gitignore  CMakeLists.txt  GeneticString.cpp  GeneticString.h  Genome.cpp  Genome.h  LSystem.cpp  LSystem.h  README.md  main.cpp  runs-exps  test.cpp
direct/: CMakeLists.txt  childtest.txt  configuration.txt  json_converter.py  main.cpp
direct/Genome/: CrossoverTest.cpp  EvolverConfiguration.cpp  EvolverConfiguration.h  Mutator.cpp  Mutator.h  NeuralNetwork.c  NeuralNetworkRepresentation.cpp  NeuralNetworkRepresentation.h  NeuronRepresentation.cpp  NeuronRepresentation.h  PartList.cpp  PartRepresentation.cpp  PartRepresentation.h  RobotRepresentation.cpp  RobotRepresentation.h  json2pb.cpp  robogen.pb.cc  robogen.pb.h
direct/Genome/ODE_Check/: BodyVerifier.cpp  BodyVerifier.h  ConfigurationReader.cpp  ConfigurationReader.h  Model.cpp  Model.h  Models.h  ObstaclesConfig.h  RobogenCollision.cpp  RobogenCollision.h  RobogenConfig.h  RobogenUtils.cpp  RobogenUtils.h  Robot.cpp  Robot.h  StartPosition.cpp  StartPosition.h  StartPositionConfig.h
direct/Genome/ODE_Check/models/: ActiveCardanModel.cpp  ActiveCardanModel.h  ActiveHingeModel.cpp  ActiveHingeModel.h  ActiveWheelModel.cpp  ActiveWheelModel.h  ActiveWhegModel.cpp  ActiveWhegModel.h  ActuatedComponent.h  BoxObstacle.cpp  BoxObstacle.h  CardanModel.cpp  CardanModel.h  Connection.cpp  Connection.h  CoreComponentModel.cpp  CoreComponentModel.h  Environment.h  HingeModel.cpp  HingeModel.h  ImuSensor.cpp  ImuSensor.h  LightSensor.cpp  LightSensor.h  LightSensorModel.cpp  LightSensorModel.h  LightSource.cpp  LightSource.h  Motor.cpp  Motor.h  ParametricBrickModel.cpp  ParametricBrickModel.h  PassiveWheelModel.cpp  PassiveWheelModel.h  PerceptiveComponent.h  RotateJointModel.cpp  RotateJointModel.h  Sensor.h  ServoMotor.cpp  ServoMotor.h  (+5 more)
direct/Test/: GenerationBest-100.json  car.txt  child2.txt  i7alt.txt  spider9alt.txt  spiderwithbrain.txt  test.json
direct/Transceivers/: GenomeTransceiver.h  UDPTransceiver.cpp  UDPTransceiver.h
direct/convertion/: Aux.cpp  DecodedGeneticString.cpp  DecodedGeneticString.h  Evolution.cpp  Evolution.h  EvolutionIndirect.cpp  Genome.cpp  Genome.h  LSystem.cpp  Measures.cpp  Tests.cpp
direct/population/: 1.txt  12.txt  child2.txt  childbaby.txt  childbaby2.txt  childbaby4.txt  guecco.txt  guecco2.txt  oi.txt
evolvable-morphologies_v2/: Evolution.py  GenomeIndirect.py  Lsystem.py  Vertex.py  configuration.txt  main.py
indirect/: CMakeLists.txt
indirect/lsystem/: CMakeLists.txt  configuration.txt  main.cpp
indirect/lsystem/include/: DecodedGeneticString.h  Evolution.h  EvolutionIndirect.h  GeneticString.h  Genome.h  LSystem.h  Measures.h  Tests.h  Tuning.h  Types.h
indirect/lsystem/src/: CMakeLists.txt  DecodedGeneticString.cpp  Evolution.cpp  EvolutionDirect.cpp  EvolutionIndirect.cpp  GeneticString.cpp  Genome.cpp  LSystem.cpp  Measures.cpp  Tests.cpp  Tuning.cpp
indirect/lsystem/test/: CMakeLists.txt
lsystem/: CMakeLists.txt  configuration.txt  main.cpp
lsystem/include/: Alphabet.h  Aux.h  Axiom.h  CMakeLists.txt  DecodedGeneticString.h  Evolution.h  EvolutionDirect.h  EvolutionIndirect.h  GeneticString.h  Genome.h  LSystem.h  Measures.h  Tests.h  Tuning.h
lsystem/src/: Alphabet.cpp  Aux.cpp  CMakeLists.txt  DecodedGeneticString.cpp  Evolution.cpp  EvolutionDirect.cpp  EvolutionIndirect.cpp  GeneticString.cpp  Genome.cpp  LSystem.cpp  Measures.cpp  Tests.cpp  Tuning.cpp
lsystem/test/: Dialog.cpp  Dialog.h  GenomeDirect.cpp  GenomeIndirect.cpp  GenomeIndirect.h  test_Alphabet.cpp  test_Axiom.cpp  test_Genome.cpp  ui_dialog.h
morphology-comparison/: forms.odt  graph.R  graph.txt  graph2.txt  graph_bkp.txt
morphology-comparison/test_random/: correlogram.R  genome_1.txt  genome_10.txt  genome_100.txt  genome_1000.txt  genome_101.txt  genome_102.txt  genome_103.txt  genome_104.txt  genome_105.txt  genome_106.txt  genome_107.txt  genome_108.txt  genome_109.txt  genome_11.txt  genome_110.txt  genome_111.txt  genome_112.txt  genome_113.txt  genome_114.txt  genome_115.txt  genome_116.txt  genome_117.txt  genome_118.txt  genome_119.txt  genome_12.txt  genome_120.txt  genome_121.txt  genome_122.txt  genome_123.txt  genome_124.txt  genome_125.txt  genome_126.txt  genome_127.txt  genome_128.txt  genome_129.txt  genome_13.txt  genome_130.txt  genome_131.txt  genome_132.txt  (+1872 more)
morphology-comparison/test_random/examples/: measures_211.txt  measures_23.txt  measures_319.txt  measures_44.txt  measures_45.txt  measures_483.txt  measures_668.txt  measures_765.txt  measures_77.txt  measures_872.txt
revolve-simulator/: CMakeLists.txt
revolve-simulator/lsystem/: CMakeLists.txt  main.cpp
revolve-simulator/lsystem/include/: Evolution.h  LSystem.h
revolve-simulator/lsystem/src/: GeneticString.cpp  Genome.cpp  Measures.cpp
revolve-simulator/lsystem/test/: GenomeDirect.h
