cmake_minimum_required(VERSION 3.7)
project(elte_simulator)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        revolve/build/include/revolve/gazebo/brain/Brain.h
        revolve/build/include/revolve/gazebo/brain/NeuralNetwork.h
        revolve/build/include/revolve/gazebo/motors/JointMotor.h
        revolve/build/include/revolve/gazebo/motors/Motor.h
        revolve/build/include/revolve/gazebo/motors/MotorFactory.h
        revolve/build/include/revolve/gazebo/motors/Motors.h
        revolve/build/include/revolve/gazebo/motors/PositionMotor.h
        revolve/build/include/revolve/gazebo/motors/VelocityMotor.h
        revolve/build/include/revolve/gazebo/plugin/BodyAnalyzer.h
        revolve/build/include/revolve/gazebo/plugin/RobotController.h
        revolve/build/include/revolve/gazebo/plugin/WorldController.h
        revolve/build/include/revolve/gazebo/sensors/BatterySensor.h
        revolve/build/include/revolve/gazebo/sensors/ImuSensor.h
        revolve/build/include/revolve/gazebo/sensors/LightSensor.h
        revolve/build/include/revolve/gazebo/sensors/PointIntensitySensor.h
        revolve/build/include/revolve/gazebo/sensors/Sensor.h
        revolve/build/include/revolve/gazebo/sensors/SensorFactory.h
        revolve/build/include/revolve/gazebo/sensors/Sensors.h
        revolve/build/include/revolve/gazebo/sensors/TouchSensor.h
        revolve/build/include/revolve/gazebo/sensors/VirtualSensor.h
        revolve/build/include/revolve/gazebo/Types.h
        revolve/build/include/revolve/msgs/body.pb.cc
        revolve/build/include/revolve/msgs/body.pb.h
        revolve/build/include/revolve/msgs/model_inserted.pb.cc
        revolve/build/include/revolve/msgs/model_inserted.pb.h
        revolve/build/include/revolve/msgs/neural_net.pb.cc
        revolve/build/include/revolve/msgs/neural_net.pb.h
        revolve/build/include/revolve/msgs/parameter.pb.cc
        revolve/build/include/revolve/msgs/parameter.pb.h
        revolve/build/include/revolve/msgs/robot.pb.cc
        revolve/build/include/revolve/msgs/robot.pb.h
        revolve/build/include/revolve/msgs/robot_states.pb.cc
        revolve/build/include/revolve/msgs/robot_states.pb.h
        revolve/build/include/revolve/msgs/sdf_body_analyze.pb.cc
        revolve/build/include/revolve/msgs/sdf_body_analyze.pb.h
        revolve/cpp/revolve/gazebo/brain/Brain.h
        revolve/cpp/revolve/gazebo/brain/NeuralNetwork.cpp
        revolve/cpp/revolve/gazebo/brain/NeuralNetwork.h
        revolve/cpp/revolve/gazebo/motors/JointMotor.cpp
        revolve/cpp/revolve/gazebo/motors/JointMotor.h
        revolve/cpp/revolve/gazebo/motors/Motor.cpp
        revolve/cpp/revolve/gazebo/motors/Motor.h
        revolve/cpp/revolve/gazebo/motors/MotorFactory.cpp
        revolve/cpp/revolve/gazebo/motors/MotorFactory.h
        revolve/cpp/revolve/gazebo/motors/Motors.h
        revolve/cpp/revolve/gazebo/motors/PositionMotor.cpp
        revolve/cpp/revolve/gazebo/motors/PositionMotor.h
        revolve/cpp/revolve/gazebo/motors/VelocityMotor.cpp
        revolve/cpp/revolve/gazebo/motors/VelocityMotor.h
        revolve/cpp/revolve/gazebo/plugin/BodyAnalyzer.cpp
        revolve/cpp/revolve/gazebo/plugin/BodyAnalyzer.h
        revolve/cpp/revolve/gazebo/plugin/register_analyzer.cpp
        revolve/cpp/revolve/gazebo/plugin/RobotController.cpp
        revolve/cpp/revolve/gazebo/plugin/RobotController.h
        revolve/cpp/revolve/gazebo/plugin/WorldController.cpp
        revolve/cpp/revolve/gazebo/plugin/WorldController.h
        revolve/cpp/revolve/gazebo/sensors/BatterySensor.cpp
        revolve/cpp/revolve/gazebo/sensors/BatterySensor.h
        revolve/cpp/revolve/gazebo/sensors/ImuSensor.cpp
        revolve/cpp/revolve/gazebo/sensors/ImuSensor.h
        revolve/cpp/revolve/gazebo/sensors/LightSensor.cpp
        revolve/cpp/revolve/gazebo/sensors/LightSensor.h
        revolve/cpp/revolve/gazebo/sensors/PointIntensitySensor.cpp
        revolve/cpp/revolve/gazebo/sensors/PointIntensitySensor.h
        revolve/cpp/revolve/gazebo/sensors/Sensor.cpp
        revolve/cpp/revolve/gazebo/sensors/Sensor.h
        revolve/cpp/revolve/gazebo/sensors/SensorFactory.cpp
        revolve/cpp/revolve/gazebo/sensors/SensorFactory.h
        revolve/cpp/revolve/gazebo/sensors/Sensors.h
        revolve/cpp/revolve/gazebo/sensors/TouchSensor.cpp
        revolve/cpp/revolve/gazebo/sensors/TouchSensor.h
        revolve/cpp/revolve/gazebo/sensors/VirtualSensor.cpp
        revolve/cpp/revolve/gazebo/sensors/VirtualSensor.h
        revolve/cpp/revolve/gazebo/standalone/body_analyzer_server.cpp
        revolve/cpp/revolve/gazebo/Types.h
        tol-revolve/build/tol/plugin/moc_InteractiveEvolutionPlugin.cxx
        tol-revolve/cpp/tol/plugin/InteractiveEvolutionPlugin.cpp
        tol-revolve/cpp/tol/plugin/InteractiveEvolutionPlugin.h
        tol-revolve/cpp/tol/plugin/RobotController.cpp
        tol-revolve/cpp/tol/plugin/RobotController.h
        tol-revolve/cpp/tol/plugin/WorldController.cpp)

add_executable(elte_simulator ${SOURCE_FILES})